# automa

./: .gitignore  Cargo.toml  README.md
src/: main.rs  runner.rs
