[package]
name = "automa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.0"
v8 = "0.75.0"
